2nd trail to print

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
     <title>Server Hello World: Maven</title>
   </head>
   <body>
-    <h1>Hello Anil this is your 1st trail, Wellcome to webpage</h1>
-    <p>Hello world!</p>
+    <h1>Hello Anil this is your 2nd trail, Wellcome to 2nd webpage</h1>
+    <p>Hello Here is trail info!</p>
   </body>
 </html>
