--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,8 +4,9 @@
     <title>Server Hello World: Maven</title>
   </head>
   <body>
-    <h1>Hello Anil Kumar</h1>
-    <h1>Hello Anil this is your 3rd trail,Wellcome </h1>
+    <h1>stpes to after commit</h1>
+    <h1>Run the maven tool again </h1>
+    <h1>Shutdown the tomcat service and run startup.sh </h1>
     <p>Hello Here is trail info!</p>
   </body>
 </html>
