Update5 index.html
adding some extra info

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,8 +4,10 @@
     <title>Server Hello World: Maven</title>
   </head>
   <body>
+    <h1>5th try  </h1>
     <h1>stpes to after commit</h1>
     <h1>Run the maven tool again </h1>
+    <h1>copy the .war file to tomcat webapps</h1>
     <h1>Shutdown the tomcat service and run startup.sh </h1>
     <p>Hello Here is trail info!</p>
   </body>
