--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,8 @@
   <body>
     <h1>5th try  </h1>
     <h1>stpes to after commit</h1>
-    <h1>Run the maven tool again </h1>
+    <h1>1st line</h1>
+    <h1> 2nd  maven tool again </h1>
     <h1>copy the .war file to tomcat webapps</h1>
     <h1>Shutdown the tomcat service and run startup.sh </h1>
     <p>Hello Here is trail info!</p>
